--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:watch": "nwb test --server"
   },
   "dependencies": {
+    "bulma": "^0.1.2",
     "classnames": "^2.2.5"
   },
   "peerDependencies": {
